k8s/apps/monitoring/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - env:
        - name: GF_SECURITY_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: GRAFANA_ADMIN_PASSWORD
              name: homelab-secrets
        image: grafana/grafana:latest
        name: grafana
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-data-0
      volumes:
      - name: grafana-data-0
        persistentVolumeClaim:
          claimName: grafana-data-0
