k8s/apps/monitoring/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsGroup: 65534
      containers:
      - env: []
        image: prom/prometheus:latest
        name: prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
          name: prometheus-config
        - mountPath: /prometheus
          name: prometheus-data-1
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
      - name: prometheus-data-1
        persistentVolumeClaim:
          claimName: prometheus-data-1
