k8s/apps/monitoring/cadvisor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  namespace: default
spec:
  ports:
  - name: port-80
    port: 80
    targetPort: 80
  selector:
    app: cadvisor
