k8s/apps/monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  ports:
  - name: port-3000
    port: 3000
    targetPort: 3000
  selector:
    app: grafana
