k8s/apps/monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  ports:
  - name: port-9090
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
