k8s/apps/monitoring/speedtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: default
spec:
  ports:
  - name: port-80
    port: 80
    targetPort: 80
  selector:
    app: speedtest
