k8s/apps/monitoring/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: default
spec:
  ports:
  - name: port-3001
    port: 3001
    targetPort: 3001
  selector:
    app: uptime-kuma
