k8s/apps/monitoring/speedtest-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`speedtest.example.com`) || Host(`speed.example.com`)
    services:
    - name: speedtest
      port: 80
  tls:
    certResolver: cloudflare
